# scripts

audiobookshelf/: abs-library-integrity-check.sh  abs-recoder.sh  abs-sync.sh  abs-unreadable-triage.sh  show-savings.awk
cnpg/: tcdbinfo.sh
daily-hud/: config.example.yaml  daily_hud.py  output.py  requirements.txt  secrets.py
daily-hud/checks/: __init__.py  certs.py  containers.py  cves.py  domains.py  github.py  kubernetes.py  ssh_hosts.py  todoist.py  truenas.py  windows.py
daily-hud/docs/plans/: 2025-12-31-daily-hud-design.md
ffmpeg/: build_ffmpeg.sh  only_build_ffmpeg.sh
hardcover/: hardcover-lists.sh
hardcover/hardcover-tagger/: README.md  pyproject.toml
hardcover/hardcover-tagger/src/hardcover_tagger/: cli.py  client.py  inventory.py  operations.py  rate_limiter.py
kubernetes/: git-update.sh  replicate-now.sh  volsync-unlock.sh
mediawiki/: mw-update.sh
misc/: pdfname2title.sh
